package apple;

public interface AparelhoTelefonico{
	public void ligar(String numero);
	public void atender();
	public void iniciarCorreioVoz();
}
