classDiagram
    class ReprodutorMusical {
        +tocar() void
        +pausar() void
        +selecionarMusica(String musica) String
    }
    class AparelhoTelefonico {
        +ligar(String numero) int
        +atender() void
        +iniciarCorreioVoz() void
    }
    class NavegadorInternet {
        +exibirPagina(String url) String
        +adicionarNovaAba() void
        +atualizarPagina() void
    }
    class iPhone {
    }
    iPhone --|> ReprodutorMusical
    iPhone --|> AparelhoTelefonico
    iPhone --|> NavegadorInternet